--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
-        "@coral-xyz/anchor": "^0.29.0",
-        "bn.js": "^5.2.1"
+        "@coral-xyz/anchor": "^0.29.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
